--- a/css/menu.css
+++ b/css/menu.css
@@ -7,7 +7,7 @@
     background-color: var(--white);
 }
 
-.landing .header {
+.header {
     position: relative;
     display: flex;
     z-index: 2;
@@ -18,7 +18,7 @@
     padding: 26px 16px 0;
 }
 
-.landing .header .header__background {
+.header .header__background {
     position: absolute;
     top: 0;
     right: 0;
@@ -29,20 +29,20 @@
     width: 100%;
 }
 
-.landing .header__bg-image {
+.header .header__bg-image {
     object-fit: fill;
     width: 100%;
     height: 100%;
 }
 
-.landing .header__navigation {
+.header .header__navigation {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 8px;
 }
 
-.landing .header__navigation .burger-menu .menu {
+.burger-menu .menu {
     position: absolute;
     top: 0;
     bottom: 0;
@@ -54,18 +54,18 @@
     background-color: var(--white-background);
 }
 
-.landing .header__navigation .burger-menu .menu.menu--opened {
+.menu.menu--opened {
     display: block;
 }
 
-.landing .header__navigation .burger-menu .menu .menu__content {
+.menu .menu__content {
     position: absolute;
     top: 30%;
     left: 50%;
     transform: translate(-50%, 50%);
 }
 
-.landing .header__navigation .burger-menu .menu .menu__item {
+.menu .menu__item {
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -76,56 +76,56 @@
     line-height: 20px;
 }
 
-.landing .header__navigation .burger-menu .menu .menu__item:not(:last-child) {
+.menu .menu__item:not(:last-child) {
     padding-bottom: 50px;
 }
 
-.landing .header__navigation .burger-menu .menu .menu__btn-close {
+.menu .menu__btn-close {
     position: absolute;
     top: 26px;
     right: 16px;
 }
 
-.landing .header__navigation .lang__toggle,
+.lang__toggle,
 .lang__dropdown,
 .burger-menu__icon {
     background-color: var(--white);
     border-radius: 12px;
 }
 
-.landing .header__navigation .lang__toggle {
+.header .lang {
+    position: relative;
+}
+
+.lang__toggle {
     padding: 14px 12px 14px 16px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.landing .header__navigation .lang {
-    position: relative;
-}
-
-.landing .header__navigation .lang__toggle .lang__toggle__name {
+.lang__toggle .lang__toggle__name {
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
     line-height: 20px;
 }
 
-.landing .header__navigation .lang__toggle .lang__toggle__icon {
+.lang__toggle .lang__toggle__icon {
     font-size: 12px;
     width: 20px;
     height: 16px;
 }
 
-.landing .header__navigation .lang__toggle .lang__toggle__icon--closed {
+.lang__toggle .lang__toggle__icon--closed {
     display: none;
 }
 
-.landing .header__navigation .lang__toggle .lang__toggle__icon--opened {
+.lang__toggle .lang__toggle__icon--opened {
     display: block;
 }
 
-.landing .header__navigation .lang__dropdown {
+.lang .lang__dropdown {
     display: none;
     position: absolute;
     right: 0;
@@ -135,22 +135,22 @@
     box-shadow: 0 0 34px rgba(0, 0, 0, 0.25);
 }
 
-.landing .header__navigation .lang__dropdown.lang__dropdown--opened {
+.lang__dropdown.lang__dropdown--opened {
     display: block;
 }
 
-.landing .header__navigation .lang__dropdown .lang__dropdown__item {
+.lang__dropdown .lang__dropdown__item {
     font-style: normal;
     font-weight: 700;
     font-size: 18px;
     line-height: 20px;
 }
 
-.landing .header__navigation .lang__dropdown .lang__dropdown__item:not(:last-child) {
+.lang__dropdown .lang__dropdown__item:not(:last-child) {
     padding-bottom: 24px;
 }
 
-.landing .header__navigation .burger-menu__icon,
+.burger-menu__icon,
 .menu__btn-close {
     display: flex;
     align-items: center;
@@ -161,7 +161,7 @@
 
 /*RESTAURANT SERVICES LINK*/
 
-.landing .main .service-info {
+.service-info {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -171,7 +171,7 @@
     padding: 40px 0;
 }
 
-.landing .main .service-info__icon svg {
+.service-info__icon svg {
     pointer-events: none;
 }
 
@@ -290,7 +290,7 @@
     padding-top: 28px;
 }
 
-.modal .modal__footer .btn-main {
+.modal__footer .btn-main {
     padding: 20px 0;
     width: 100%;
     margin: 0 auto;
