--- a/css/main-menu.css
+++ b/css/main-menu.css
@@ -1,10 +1,12 @@
 .swiper__wrap {
+    position: relative;
     padding: 0 16px 22px 16px;
     width: 100%;
 }
 
 .swiper__wrap .swiper-pagination {
     position: relative;
+    z-index: 1;
     bottom: 0;
     width: 100%;
     justify-content: space-between;
@@ -13,8 +15,8 @@
 .swiper__wrap .swiper-pagination-bullet {
     flex-grow: 1;
     height: 4px;
-    /*width: calc((100% - 32px) / 4);*/
     border-radius: 10px;
+    opacity: 1;
     background-color: var(--grey-primary);
 }
 
@@ -28,6 +30,22 @@
 
 .swiper__wrap .swiper-pagination-bullet-active {
     background-color: var(--black);
+}
+
+.slider .dish--expandable .dish__img {
+    margin-bottom: 60px;
+}
+
+.slider {
+    position: relative;
+}
+
+.slider .slider-pagination {
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    justify-content: space-between;
+    flex-wrap: nowrap;
 }
 
 .swiper--menu {
@@ -97,8 +115,6 @@
 
 .categories {
     border-top: 2px solid #ffffff;
-    /*font-size: 0;*/
-    /*height: 80px;*/
     background-color: var(--white);
     width: 100%;
     padding-bottom: 48px;
@@ -200,8 +216,6 @@
 .dish__info__specification .dish__calorie {
     font-style: normal;
     font-weight: 500;
-    /*font-size: 14px;*/
-    /*line-height: 20px;*/
     text-align: center;
     color: var(--grey);
 }
@@ -255,6 +269,7 @@
     width: 100%;
     height: 100vh;
     margin: 0 auto;
+    overflow-x: hidden;
     background-color: var(--white-background);
 }
 
@@ -278,12 +293,14 @@
 }
 
 .special-menu__header .special-menu__btn-close {
-    /*position:*/
-    /*right: 16px;absolute;*/
-    /*top: 26px;*/
     width: 48px;
     height: 48px;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.special-menu__btn-close .feather-x {
+    width: 36px;
+    height: 36px;
 }
