--- a/css/main-menu.css
+++ b/css/main-menu.css
@@ -32,7 +32,7 @@
     background-color: var(--black);
 }
 
-.slider .dish--expandable .dish__img {
+.slider .dish--expand .dish__img {
     margin-bottom: 60px;
 }
 
@@ -191,6 +191,40 @@
     line-height: 22px;
 }
 
+.dish .dish__description {
+    height: 0;
+    overflow: hidden;
+}
+
+.dish--expand {
+    flex-wrap: wrap;
+    width: 100%;
+}
+
+.dish--expand .dish__name {
+    font-size: 20px;
+}
+
+.dish--expand .dish__img {
+    width: 100%;
+}
+
+.dish--expand .dish__img img {
+    border-radius: 12px;
+    width: 100%;
+    max-width: 100%;
+    height: 100%;
+}
+
+.dish--expand .dish__description {
+    padding-bottom: 12px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    height: auto;
+}
+
 .dish .dish__info {
     width: 100%;
     display: flex;
@@ -218,43 +252,6 @@
     font-weight: 500;
     text-align: center;
     color: var(--grey);
-}
-
-.dish--expandable {
-    overflow: hidden;
-    transition: height 0.4s ease-out;
-    height: 0;
-}
-
-.dish--expandable--open {
-    height: auto;
-}
-
-.dish--expandable .dish__img {
-    margin-bottom: 18px;
-    border-radius: 12px;
-}
-
-.dish--expandable .dish__img img {
-    object-fit: cover;
-    border-radius: 12px;
-    width: 100%;
-    height: 100%;
-}
-
-.dish--expandable .dish__name {
-    font-style: normal;
-    font-weight: 900;
-    font-size: 20px;
-    line-height: 22px;
-}
-
-.dish--expandable .dish__description {
-    padding: 12px 0 24px;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 22px;
 }
 
 .special-menu {
