Fix Styles According To Design

--- a/css/general.css
+++ b/css/general.css
@@ -111,6 +111,7 @@ button.btn-main__active {
     font-weight: 900;
     font-size: 14px;
     line-height: 20px;
+    white-space: nowrap;
 }
 
 .price--green {
