--- a/css/general.css
+++ b/css/general.css
@@ -48,6 +48,7 @@
     padding: 0;
     outline: none;
     font-family: 'ZenKakuGothicNew', sans-serif;
+    -webkit-tap-highlight-color: transparent;
 }
 
 ul[class],
@@ -97,6 +98,7 @@ p {
 button {
     outline: none;
     border: none;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 button:focus-visible,
