Fix Improve Categories Box Shadow

--- a/css/main-menu.css
+++ b/css/main-menu.css
@@ -129,6 +129,7 @@
 
 .categories__wrap--shadow-on {
     box-shadow: 0 0 34px rgba(0, 0, 0, 0.25);
+    -webkit-appearance: none;
 }
 
 .categories {
